--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 
-* [lang] Syntax highlighting for kinds?
+* [test] Track down memory leak when running in Fble/Bench%.
 
 * [compile] Warn about unused variables?
  - Add to spec? Use '_' to distinguish intended unused variables?
