Warn about unused variables.
And remove all the unused variables that have accumulated in tests and
programs that have been written so far.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,5 @@
 
-* [test] Track down memory leak when running in Fble/Bench%.
-
-* [compile] Warn about unused variables?
- - Add to spec? Use '_' to distinguish intended unused variables?
+* [test] Track down memory leak when running /Snake/Bench%.Bench
 
 * [snake] Test and fix bug when snake eats its tail.
 * [snake] Ignore moves that aren't orthogonal to current snake direction.
