--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@
 * [test] Implement support for FbleRefDelete of cycles.
 * [test] Figure out source of /Snake/Bench% memory leak.
   - looks like we are leaking a proc put value that's holding on to a link.
+  - question: when does the game end? Could we be silently hitting a deadlock
+    condition and failing to clean up?
 
 * [snake] Test and fix bug when snake eats its tail.
 * [snake] Ignore moves that aren't orthogonal to current snake direction.
