--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,12 @@
 
-* [test] Implement support for FbleRefDelete of cycles.
+* [test] Add fble-ref-test for splitting cycles
+   Test that we don't retain a cycle a->b->c by referencing a separate object
+   d that used to be in the cycle a->b->c->d.
+
+* [ref] Cleanup ref.c as reasonable
+ - Avoid duplicate traversals.
+ - Use direct callbacks where possible instead of adding to vectors.
+ - Reorganize code to what makes sense.
 
 * [snake] Test and fix bug when snake eats its tail.
 * [snake] Ignore moves that aren't orthogonal to current snake direction.
