--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,24 @@
 
 * [perf] See if we can avoid making extra copies of args in function
   application. It shows up pretty high on gcov.
+  - Part of the problem is we need to traverse over the args to reach the base
+    function before we know how big a frame to allocate to store the args on.
+  - Perhaps we could cache the frame size with the thunk to avoid that extra
+    traversal?
+  - Do you really think this has a noticeable impact on performance?
 
 * [perf] profile investigation? Suggests
  - Eval instruction fetch and decode, which is called a ton.
+
  - Profile GetCallData, which does a linear search that could be more
    efficient.
+   With profiling disabled, fble bench takes: 2m30 seconds
+   With profiling enabled, fble bench takes:  4m01 seconds
+   That suggests 37% overhead from profiling, or 1m30 seconds of fble bench.
+
  - ValueRetain and the underlying Retain, which gets called a ton.
+   Experiments suggest 28% overhead from gc, or about 60 seconds of fble bench.
+
  - Note: using -O3 makes the program run more than twice as fast, but the perf
    profile report still highlights the same hot spots. Recommendation: figure
    out how to address those hot spots using high level improvements - don't
