--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,16 @@
 
-* [profile] Add parent thread to FbleNewThread.
- - In order to maintain the profile stack when forking new threads
-
-* [profile] Fix multithreaded profiling bug.
+* [profile] Optimize profiling.
  - Introduce per-thread set tracking of current calls
    caller -> callee / 64 -> uint64_t, where callee % 64th bit is 1 if the call
    is on the stack, false otherwise. And the whole array is NULL if there are
-   no calls to the block.
+   no calls to the block. ?
 
 * [profile] Make the profiler a sampling profiler.
  - Sample every N instructions, where N can be configured somehow.
  - Clock and N is associated with the profile.
 
 * [cc] Implement .fble -> .o compiler
- - Goal is to significantly increase performance but removing the instruction
+ - Goal is to significantly increase performance by removing the instruction
    fetch decode logic.
 
 * [gc] Optimize gc. 
@@ -55,6 +52,9 @@
    abstract type?
 
 * [profile] Label blocks in exec process bindings by binding name?
+* [profile] I suspect there are still bugs around block id 0
+ - test that calling into block 0 does the right thing. Though I'm not sure it
+   makes much sense.
 
 * [eval] Experiment with alternate garbage collection implementations.
  - For the purpose of improving memory and runtime performance.
