--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,4 @@
 
-* [compile] remove instruction block 'time' field
- - now that we use executed instructions at runtime instead.
-
 * [profile] Label blocks in exec process bindings by binding name.
 
 * [profile] Optimize profiling.
@@ -9,6 +6,8 @@
    caller -> callee / 64 -> uint64_t, where callee % 64th bit is 1 if the call
    is on the stack, false otherwise. And the whole array is NULL if there are
    no calls to the block. ?
+ - Idea: sample stack duplicates callee with subsequent caller. Maybe only
+   store it once to save memory and presumably be a little faster?
  - Idea: if forking is expensive, double check we avoid forking the profile
    thread if there is only one child of exec? Or only fork the profile thread
    for secondary children, not the primary child?
