Fix some bugs in profile blocks for exec.
* The location for the overall exec block was wrong.
* Exec arg blocks were being improperly labelled.
* Pick a more meaningful location for the main entry block.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 
-* [profile] Label blocks in exec process bindings by binding name.
+* [profile] don't introduce an extra ! for bodies of expressions.
+ - Maybe in general we want to support a CompileProcExpr that evaluates and
+   compiles the expression in place. That would fix the extra !, save some
+   instructions, and generally make some more sense.
 
 * [profile] Optimize profiling.
  - Idea: if forking is expensive, double check we avoid forking the profile
